<resources>
    <string name="module_profile_feature_name">Profile</string>
    <string name="module_profile_feature_summary">Perform custom actions if match given condition</string>

    <string name="module_profile_title_global_var">Global variant</string>
    <string name="module_profile_title_rule_engine">Engine</string>
    <string name="module_profile_title_action_console">Action Console</string>
    <string name="module_profile_title_log">Log</string>

    <string name="module_profile_summary_rule_engine">The engine is a tool for publishing facts. Thanox has multiple publishers enabled by default. The following engines support turning on or off. Please pay attention to the engine description, shutting down the engine may cause some profiles to not be triggered or executed normally</string>
    <string name="module_profile_pref_title_rule_engine_automation">Automation</string>
    <string name="module_profile_pref_summary_rule_engine_automation">Supports performing automatic clicks and find views. \n\n📢
        Note: This engine may cause some app accessibility service to not work</string>
    <string name="module_profile_pref_title_rule_engine_push">Push</string>
    <string name="module_profile_pref_summary_rule_engine_push">Publish facts of push message arrival</string>

    <string name="module_profile_pref_title_rule_engine_su">su API</string>
    <string name="module_profile_pref_summary_rule_engine_su">Enable su API support for Thanox profile. please click Allow in the pop-up super permission grant request. If no request is received, please manually turn on the super user permission. \nsu command will be executed as Thanox application. \nPlease allow Thanox app to start in background</string>
    <string name="module_profile_pref_title_rule_engine_custom_su">Custom su</string>
    <string name="module_profile_pref_summary_rule_engine_custom_su">You can change default su path by input the custom su path</string>

    <string name="module_profile_should_enable_su">This profile may not work since <b>su API</b> support not enabled, please go to Engine Settings to enable it</string>
    <string name="module_profile_should_enable_push">This profile may not work since <b>Push Message Engine</b> not enabled, please go to Engine Settings to enable it</string>
    <string name="module_profile_miss_global_var">This profile may not work since below global var is missing, you need to create these vars.\n%s</string>
    <string name="module_profile_block_thread">This profile may call Thread.sleep, which may block the execution of other profiles; please adjust the priority of this profile to a negative number so that it will be executed in a new thread.</string>

    <string name="module_profile_pref_title_rule_engine_shortcut">Create shortcut</string>
    <string name="module_profile_pref_summary_rule_engine_shortcut">Create a launcher shortcut, when this shortcut launched, thanox will publish a fact with the shortcut fact value</string>

    <string name="module_profile_pref_title_rule_engine_date_time">Date &amp; Time</string>
    <string name="module_profile_pref_summary_rule_engine_date_time">Schedule some repeating or timed tasks</string>
    <string name="module_profile_date_time_regular_interval">Regular interval</string>
    <string name="module_profile_date_time_alarm">Time of a day</string>
    <string name="module_profile_date_time_tag">Tag is for condition check. \nExample of use: %s</string>
    <string name="module_profile_date_time_min_interval">Min interval is 15m</string>

    <string name="module_profile_rule_edit_action_save">Save</string>
    <string name="module_profile_rule_edit_action_discard">Discard</string>
    <string name="module_profile_rule_edit_action_text_size_inc">Increase</string>
    <string name="module_profile_rule_edit_action_text_size_dec">Decrease</string>

    <string name="module_profile_rule_wiki">Wiki</string>
    <string name="module_profile_rule_impor_from_file">Import from file</string>
    <string name="module_profile_rule_impor_example">Import examples</string>
    <string name="module_profile_rule_online">View Online Profiles</string>

    <string name="module_profile_rule_edit">Edit</string>
    <string name="module_profile_rule_new">New</string>
    <string name="module_profile_rule_example"></string>

    <string name="module_profile_editor_select_format">Choose format</string>
    <string name="module_profile_editor_save_success">Save success, you can enable it</string>
    <string name="module_profile_editor_save_check_error">Bad content</string>

    <string name="module_profile_editor_discard_dialog_title">Discard</string>
    <string name="module_profile_editor_discard_dialog_message">Are you sure?</string>

    <string name="module_profile_editor_delete_dialog_title">Delete</string>
    <string name="module_profile_editor_delete_dialog_message">Are you sure?</string>

    <string name="module_profile_edit_delete">Delete</string>
    <string name="module_profile_edit_show_hide_symbols">Symbol bar</string>

    <string name="module_profile_edit_var_title_hint">Please input name</string>
    <string name="module_profile_var_list_item_size">%s variants</string>
    <string name="module_profile_title_shortcut_fact_value">Fact value</string>
    <string name="module_profile_title_shortcut_label">Shortcut label</string>

    <string name="module_profile_rule_format_tips_title">Format tips</string>
    <string name="module_profile_rule_format_tips_message">The <b>name</b> field should use alphanumeric combinations as much as possible, and no special characters should appear; \n\nany characters can be used in the <b>description</b> field, just briefly introduce the purpose of this scenario</string>

    <string name="module_profile_add_to_global_var">Add to Global Variant</string>
</resources>
