<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <item
            android:id="@+id/action_delete"
            android:icon="@drawable/module_profile_ic_delete_bin_fill"
            android:title="@string/module_profile_edit_delete"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction" />

    <item
            android:id="@+id/action_text_size_inc"
            android:icon="@drawable/module_profile_ic_zoom_in_fill"
            android:title="@string/module_profile_rule_edit_action_text_size_inc"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction" />

    <item
            android:id="@+id/action_text_size_dec"
            android:icon="@drawable/module_profile_ic_zoom_out_fill"
            android:title="@string/module_profile_rule_edit_action_text_size_dec"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction" />

    <item
            android:id="@+id/action_save_apply"
            android:icon="@drawable/module_profile_ic_save_fill"
            android:title="@string/module_profile_rule_edit_action_save"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction" />

</menu>